# syntatic_interpretability

./: .gitignore  README.md  capacity_experiment.org  experiments.org  pyproject.toml
archive/: archive_0_gdrive.ipynb
syntactic_interpretability/: iterators.py  visualizations.py
syntactic_interpretability/archive/: archive_0_gdrive.ipynb  archive_1_local.ipynb
syntactic_interpretability/metrics/: activations_metrics.py  inpca.py  measurement.py  weight_metrics.py
synterp/: measures.py
tests/: test_activation_metrics.py  test_visualizations.ipynb  test_weight_metrics.py
