[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntactic_interpretability"
version = "0.0.1"

dependencies = [
    "transformers>=4.34.1",
    "transformer_lens>=1.12.0",
    "pytest>=7.4.4",
    "jaxtyping>=0.2.25",
    "plotly>=5.18.0"
]